syntax = "proto3";

package auth;
option go_package="proto/auth";

message Auth {
    string uid = 1;
    string user_id = 2;
    string access_token = 3;
    bool is_logout = 4;
}

message CheckTokenRequest {
    string user_id = 1;
}