syntax = "proto3";

package users;
option go_package="proto/users";

message User {
    string uid = 1;
    string name = 2;
    string phone = 3;
    string email = 4;
    string password = 5;
}

message GetUserByEmailRequest {
    string email = 1;
}